--- a/culturama/css/style.css
+++ b/culturama/css/style.css
@@ -1,5 +1,5 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #111111;
-    color: aliceblue;
+    background-color: #c5c5c5;
+    color: #272727;
 }
