--- a/culturama/css/style.css
+++ b/culturama/css/style.css
@@ -1,5 +1,48 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #c5c5c5;
+    font-family: 'Work Sans', sans-serif;
+    background-color: #f9f9f9;
     color: #272727;
+}
+
+main {
+    width: 100%;
+    max-width: 700px;
+    margin: 0 auto;
+}
+
+header {
+    text-align: center;
+    margin-bottom: 24px;
+}
+
+img {
+    width: 100px;
+}
+
+h1 {
+    font-family: 'Fjalla One', sans-serif;
+}
+
+form {
+    background-color: #fff;
+    padding: 16px;
+    border-radius: 24px;
+}
+
+fieldset {
+    padding: 16px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+}
+
+legend {
+    font-weight: bold;
+    font-size: 16px;
+    padding: 0 4px;
 }
