--- a/culturama/css/style.css
+++ b/culturama/css/style.css
@@ -46,3 +46,32 @@ legend {
     font-size: 16px;
     padding: 0 4px;
 }
+
+input {
+    width: 100%;
+    padding: 16px;
+    margin-bottom: 24px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+textarea {
+    min-width: 100%;
+    max-width: 100%;
+    min-height: 120px;
+}
+
+input[type="radio"],
+[type="checkbox"] {
+    width: auto;
+}
+
+input[type="color"] {
+    width: 40px;
+    padding: 0 4px;
+}
+
+label {
+    display: inline-block;
+    margin-bottom: 4px;
+}
