--- a/culturama/css/style.css
+++ b/culturama/css/style.css
@@ -29,10 +29,16 @@ h1 {
     font-family: 'Fjalla One', sans-serif;
 }
 
+p {
+    margin-bottom: 8px;
+    font-weight: bold;
+}
+
 form {
     background-color: #fff;
     padding: 16px;
     border-radius: 24px;
+    margin-bottom: 120px;
 }
 
 fieldset {
@@ -47,7 +53,8 @@ legend {
     padding: 0 4px;
 }
 
-input {
+input,
+textarea {
     width: 100%;
     padding: 16px;
     margin-bottom: 24px;
@@ -57,7 +64,7 @@ input {
 
 textarea {
     min-width: 100%;
-    max-width: 100%;
+    max-width: max-content;
     min-height: 120px;
 }
 
@@ -74,4 +81,42 @@ input[type="color"] {
 label {
     display: inline-block;
     margin-bottom: 4px;
+}
+
+input:invalid,
+select:invalid,
+textarea:invalid {
+    border-color: red;
+}
+
+input:valid,
+select:valid,
+textarea:valid {
+    border-color: green;
+}
+
+input[type="submit"],
+input[type="reset"] {
+    width: max-content;
+    padding: 8px 16px;
+    background-color: #fff;
+    border-radius: 8px;
+    margin-top: 8px;
+    cursor: pointer;
+}
+
+input[type="reset"] {
+    border-color: red;
+}
+
+input[type="submit"]:hover {
+    background-color: #003d00;
+    border-color: #003d00;
+    color: #f9f9f9;
+}
+
+input[type="reset"]:hover {
+    background-color: #3d0000;
+    border-color: #3d0000;
+    color: #f9f9f9;
 }
