--- a/jornada-viagens/css/style.css
+++ b/jornada-viagens/css/style.css
@@ -1,15 +1,4 @@
-:root {
-    --background-primary-color: #ffffff;
-    --background-secondary-color: #f5f5f5;
-    --background-tertiary-color: #000000;
-
-    --button-primary-color: #BF0101;
-    --button-secondary-color: #B81515;
-
-    --text-primary-color: #222222;
-    --text-secondary-color: #FFFFFF;
-}
-
+/* CSS RESET */
 body,
 img,
 h1,
@@ -24,4 +13,29 @@ button {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+/* END CSS RESET */
+
+@font-face {
+    font-family: "Montserrat";
+    src: url(../fonts/Montserrat-VariableFont_wght.ttf);
+    font-style: normal;
+    font-display: swap;
+}
+
+:root {
+    --primary-color: #BF0101;
+    --secondary-color: #B81515;
+
+    --background-primary-color: #ffffff;
+    --background-secondary-color: #f5f5f5;
+    --background-tertiary-color: #000000;
+
+    --text-primary-color: #222222;
+    --text-secondary-color: #FFFFFF;
+
+    --title-weight: 700;
+    --text-weight: 400;
+    --menu-text-weight: 500;
 }
