--- a/jornada-viagens/css/header.css
+++ b/jornada-viagens/css/header.css
@@ -5,6 +5,7 @@ header {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    position: relative;
 }
 
 .logo {
@@ -15,4 +16,25 @@ header {
 
 nav {
     display: none;
+}
+
+input[type="checkbox"]:checked ~ nav {
+    display: block;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: var(--background-tertiary-color);
+}
+
+.list-links {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.nav-link {
+    color: var(--text-secondary-color);
+    text-decoration: none;
 }
