feat: (jornada-viagens) Add responsiveness to the header and update logos for mobile and desktop versions.

--- a/jornada-viagens/css/global.css
+++ b/jornada-viagens/css/global.css
@@ -49,3 +49,9 @@ h1 {
     font-weight: var(--title-weight);
     color: var(--primary-color);
 }
+
+@media screen and (min-width: 1024px) {
+    .container {
+        max-width: 1200px;
+    }
+}
