--- a/jornada-viagens/css/global.css
+++ b/jornada-viagens/css/global.css
@@ -45,6 +45,10 @@ body {
     font-family: "Montserrat";
 }
 
+.container {
+    padding: 88px 24px 0 24px;
+}
+
 h1 {
     font-weight: var(--title-weight);
     color: var(--primary-color);
@@ -52,6 +56,8 @@ h1 {
 
 @media screen and (min-width: 1024px) {
     .container {
+        margin: 0 auto;
         max-width: 1200px;
+        padding: 104px 120px 0 120px;
     }
 }
