--- a/jornada-viagens/css/header.css
+++ b/jornada-viagens/css/header.css
@@ -1,14 +1,11 @@
-header {
+.container.nav {
     background-color: var(--background-tertiary-color);
-    padding: 36px 24px;
-}
-
-header .container {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     position: relative;
+    padding: 36px 24px;
 }
 
 .logo {
@@ -63,16 +60,16 @@ input[type="checkbox"]:checked ~ nav {
 }
 
 @media screen and (min-width: 1024px) {
+    .container.nav {
+        padding: 36px 120px;
+    }
+
     .logo-desktop {
         display: block;
     }
 
     .logo-mobile {
         display: none;
-    }
-
-    header {
-        padding: 36px 120px;
     }
 
     .nav-link:hover {
