--- a/jornada-viagens/css/global.css
+++ b/jornada-viagens/css/global.css
@@ -1,88 +1,124 @@
+@font-face {
+  font-family: "Montserrat";
+  src: url(../fonts/Montserrat-VariableFont_wght.ttf);
+  font-style: normal;
+  font-display: swap;
+}
+
+:root {
+  --primary-color: #8f0101;
+  --secondary-color: #b81515;
+
+  --background-primary-color: #ffffff;
+  --background-secondary-color: #f5f5f5;
+  --background-tertiary-color: #000000;
+
+  --text-primary-color: #222222;
+  --text-secondary-color: #ffffff;
+
+  --title-weight: 700;
+  --text-weight: 400;
+  --menu-text-weight: 500;
+}
+
 /* CSS RESET */
 body,
 img,
 h1,
-h2,
-h3,
-h4,
 p,
-article,
 fieldset,
 legend,
 label,
 input,
 select,
 textarea,
-button,
-li {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-h1,
-h2,
-h3,
-h4 {
-    text-align: center;
-}
-
-/* END CSS RESET */
-
-@font-face {
-    font-family: "Montserrat";
-    src: url(../fonts/Montserrat-VariableFont_wght.ttf);
-    font-style: normal;
-    font-display: swap;
-}
-
-:root {
-    --primary-color: #bf0101;
-    --secondary-color: #b81515;
-
-    --background-primary-color: #ffffff;
-    --background-secondary-color: #f5f5f5;
-    --background-tertiary-color: #000000;
-
-    --text-primary-color: #222222;
-    --text-secondary-color: #ffffff;
-
-    --title-weight: 700;
-    --text-weight: 400;
-    --menu-text-weight: 500;
+button {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: "Montserrat";
-    color: var(--text-primary-color);
+  font-family: "Montserrat";
+  color: var(--text-primary-color);
 }
 
-.container {
-    padding: 88px 24px 0;
+section {
+  width: 312px;
+  margin: 0 auto 88px;
 }
 
+section.hero,
+section.bottom-hero {
+  width: 100%;
+  margin: 0;
+}
+.section-title {
+  width: 280px;
+  margin: 0 auto 32px;
+}
 .section-title h2 {
-    font-size: 28px;
-    font-weight: var(--title-weight);
-    margin-bottom: 16px;
+  font-size: 28px;
+  font-weight: var(--title-weight);
+  margin: 0;
+  text-align: center;
 }
-
 .section-title hr {
-    width: 180px;
-    height: 4px;
-    background-color: var(--secondary-color);
+  width: 180px;
+  height: 4px;
+  background-color: var(--secondary-color);
+  border: none;
+  margin: 16px auto 32px;
 }
 
-@media screen and (min-width: 762px) {
-    .section-title h2 {
-        font-size: 32px;
-    }
+.content-title {
+  font-size: 28px;
+  font-weight: var(--title-weight);
+  margin: 0 0 24px;
+}
+.content-text {
+  font-size: 20px;
+  font-weight: var(--text-weight);
+  line-height: 32px;
+}
+
+.button {
+  min-width: 280px;
+  height: 64px;
+  color: var(--text-secondary-color);
+  font-weight: var(--title-weight);
+  font-size: 20px;
+  background-color: var(--secondary-color);
+  border-radius: 16px;
+  display: inline-block;
+  text-decoration: none;
+  line-height: 64px;
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  section {
+    width: 648px;
+  }
+  .section-title {
+    width: 100%;
+  }
+  .section-title h2 {
+    font-size: 32px;
+  }
 }
 
 @media screen and (min-width: 1024px) {
-    .container {
-        margin: 0 auto;
-        max-width: 1200px;
-        padding: 104px 120px 0;
-    }
+  section {
+    width: 900px;
+  }
+  .button:hover {
+    background-color: var(--primary-color);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  section {
+    width: 1200px;
+  }
 }
