--- a/jornada-viagens/css/header.css
+++ b/jornada-viagens/css/header.css
@@ -1,78 +1,104 @@
-.container.nav {
-    background-color: var(--background-tertiary-color);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    position: relative;
-    padding: 36px 24px;
+.main-header {
+  background-color: var(--background-tertiary-color);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 38px 48px;
+  position: relative;
 }
 
 .logo {
-    display: inline-block;
-    width: auto;
-    height: 64px;
+  display: inline-block;
+  width: 68px;
+  height: 64px;
 }
 
-.logo-desktop {
-    display: none;
+.img-mobile {
+  display: block;
 }
 
-nav {
-    display: none;
+.img-desktop {
+  display: none;
+}
+.navigation-menu {
+  margin-top: 24px;
 }
 
 input[type="checkbox"]:checked ~ nav {
-    display: block;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    background-color: var(--background-tertiary-color);
+  display: block;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  background-color: var(--background-tertiary-color);
+}
+
+nav {
+  display: none;
 }
 
 .list-links {
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
+  list-style: none;
 }
 
-.nav-link {
-    color: var(--text-secondary-color);
-    font-size: 24px;
-    text-decoration: none;
+.list-links li {
+  margin: 16px 0;
+}
+.list-links li a {
+  color: var(--text-secondary-color);
+  text-decoration: none;
+  font-weight: var(--menu-text-weight);
+  font-size: 24px;
+}
+.list-links li a.active {
+  text-decoration: underline;
 }
 
 @media screen and (min-width: 768px) {
-    .nav-menu label {
-        display: none;
-    }
+  .navigation-menu {
+    margin-top: 0;
+    width: 467px;
+  }
+  .navigation-menu label {
+    display: none;
+  }
 
-    nav {
-        display: block;
-    }
-
-    .list-links {
-        flex-direction: row;
-        gap: 24px;
-    }
+  .navigation-menu nav {
+    display: block;
+  }
+  .navigation-menu ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0;
+  }
+  .navigation-menu li {
+    margin: 0;
+  }
 }
 
 @media screen and (min-width: 1024px) {
-    .container.nav {
-        padding: 36px 120px;
-    }
+  .main-header {
+    padding: 38px 120px;
+  }
+  .logo {
+    width: 260px;
+    height: 64px;
+  }
+  .img-desktop {
+    display: block;
+  }
+  .img-mobile {
+    display: none;
+  }
+  .navigation-menu a:hover {
+    color: var(--primary-color);
+  }
+}
 
-    .logo-desktop {
-        display: block;
-    }
-
-    .logo-mobile {
-        display: none;
-    }
-
-    .nav-link:hover {
-        color: var(--primary-color);
-    }
+@media screen and (min-width: 1920px) {
+  .main-header {
+    padding: 38px 160px;
+  }
 }
